Add passport for authentication

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  if (!user)
+    a(href="/accounts/login") Login
+    br
+    a(href="/accounts/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/accounts/logout") Logout
